Reduce scope of LIBRARY.properties to only `enablePreview=true|false`